force-app/main/default/objects/Workflow_Schedule__c/Workflow_Schedule__c.object-meta.xml
<CustomObject>
    <label>Workflow Schedule</label>
    <nameField>
        <label>Workflow Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>