force-app/main/default/objects/Workflow_Schedule__c/fields/Criteria_Operator_2__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Operator_2__c</fullName>
    <label>Criteria Operator 2</label>
    <length>16</length>
    <type>Text</type>
</CustomField>