force-app/main/default/objects/Workflow_Schedule__c/fields/Criteria_Value_2__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Value_2__c</fullName>
    <label>Criteria Value 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>