force-app/main/default/objects/Workflow_Schedule__c/fields/Minute__c.field-meta.xml
<CustomField>
    <fullName>Minute__c</fullName>
    <label>Minute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>00</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>01</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>02</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>03</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>04</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>05</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>06</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>07</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>08</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>09</label>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>27</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>