force-app/main/default/objects/Workflow_Schedule__c/fields/Parsed_SQL__c.field-meta.xml
<CustomField>
    <fullName>Parsed_SQL__c</fullName>
    <label>Parsed SQL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>